@@ -15,6 +15,7 @@
 "COMPAQ  ", "MSA1000 VOLUME  ", "3", "1"
 "DEC     ", "HSG80           ", "3", "1"
 "HP      ", "HSV100          ", "3", "1"
+"3PARdata", "VV              ", "3", "1"
 "HP      ", "A6189A          ", "3", "1"
 "HP      ", "OPEN-           ", "3", "1"
 "DDN     ", "SAN DataDirector", "3", "1"
